Add enpoint POST /login - user login and generate access token
