# controller/user.go
@@ -22,10 +22,49 @@ func NewUserController(db *gorm.DB) User {
 	}
 }
 
+// LoginUser godoc
+// @Summary      Login
+// @Description  login by giving user credential in request body
+// @Tags         User
+// @Accept       json
+// @Produce      json
+// @Param        request   body      dto.LoginBody  true  "User Credential"
+// @Success      200  {object}  dto.LoginResponse
+// @Failure      400  {object}  helpers.APIError
+// @Failure      404  {object}  helpers.APIError
+// @Failure      500  {object}  helpers.APIError
+// @Router       /login [post]
 func (controller User) LoginUser(c echo.Context) error {
-	return c.JSON(http.StatusOK, echo.Map{
-		"message": "OK",
-	})
+	body := dto.LoginBody{}
+	c.Bind(&body)
+	if err := c.Validate(&body); err != nil {
+		return helpers.ErrorMessage(c, &helpers.ErrBadRequest, err.Error())
+	}
+
+	user, err := repository.GetUser(body.Email, controller.DB)
+	if errors.Is(err, gorm.ErrRecordNotFound) {
+		return helpers.ErrorMessage(c, &helpers.ErrNotFound, "email not found")
+	}
+	if err != nil {
+		return helpers.ErrorMessage(c, &helpers.ErrInternalServer, err.Error())
+	}
+
+	err = bcrypt.CompareHashAndPassword([]byte(user.Password), []byte(body.Password))
+	if err != nil {
+		return helpers.ErrorMessage(c, &helpers.ErrBadRequest, "wrong password")
+	}
+
+	token, err := GenerateToken(user.ID, user.Email)
+	if err != nil {
+		return helpers.ErrorMessage(c, &helpers.ErrInternalServer, err.Error())
+	}
+
+	response := dto.LoginResponse{
+		Message:     "login success",
+		AccessToken: token,
+	}
+
+	return c.JSON(http.StatusOK, response)
 }
 
 func (controller User) RegisterUser(c echo.Context) error {
